[project]
name = "vimlearn"
version = "0.1.0"
description = "Interactive CLI tool for learning Vim"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
vimlearn = "vimlearn.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vimlearn"]
